--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,4 +1,4 @@
-<h1><%= @user.email %>さんのページ</h1>
+<h1><%= @user.email %>さんのページです</h1>
 
 <% @user.articles.each do |article| %>
 	<%= article.title %>:
