--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -23,6 +23,14 @@
         <td><%= link_to 'Show', article %></td>
         <td><%= link_to 'Edit', edit_article_path(article) %></td>
         <td><%= link_to 'Destroy', article, method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td>
+        <% if article.liked_by? current_user %>
+          <%= link_to 'いいね解除', article_like_path(article.id), method: :delete %>
+        <% else %>
+         <%= link_to 'いいね！', article_like_path(article.id), method: :article %>
+        <% end %>
+        </td>
+
       </tr>
     <% end %>
   </tbody>
