--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -2,5 +2,10 @@
 
 <% @user.articles.each do |article| %>
 	<%= article.title %>:
-	<%= article.author %><br>
+	<%= article.author %>
+	<% if article.liked_by? current_user %>
+          <%= link_to 'いいね解除', article_like_path(article.id), method: :delete %>
+        <% else %>
+         <%= link_to 'いいね', article_like_path(article.id), method: :article %>
+        <% end %><br>
 <% end %>
